--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "type": "module",
   "dependencies": {
+    "discord.js": "^14.7.1",
     "firebase": "^9.15.0",
     "puppeteer": "^19.4.1"
   }
